--- a/templates/auth/password_reset.html
+++ b/templates/auth/password_reset.html
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    <form method="post" class="w-80 h-44 left-[33px] top-[242px] absolute bg-black/0 border-gray-200">
+    <form autocomplete="off" method="post" class="w-80 h-44 left-[33px] top-[242px] absolute bg-black/0 border-gray-200">
       {% csrf_token %}
       {% if form.non_field_errors %}
         <div class="w-80 h-4 left-0 top-0 absolute bg-black/0 border-gray-200">
