--- a/templates/dashboard/components/manage_users/roles_overview.html
+++ b/templates/dashboard/components/manage_users/roles_overview.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="bg-white rounded-xl shadow-sm border border-gray-200 overflow-hidden">
-    <form id="permission-form" action="" method="POST">
+    <form autocomplete="off" id="permission-form" action="" method="POST">
       {% csrf_token %}
       <div class="bg-neutral-50 border-b border-gray-200">
         <div class="min-w-[994px] grid grid-cols-[minmax(260px,1.6fr)_repeat(4,minmax(140px,1fr))]">
