--- a/templates/dashboard/gym.html
+++ b/templates/dashboard/gym.html
@@ -162,7 +162,7 @@
         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
       </button>
     </div>
-    <form id="gymMemberForm" method="post" action="" class="p-6 space-y-6 overflow-y-auto flex-grow">
+    <form autocomplete="off" id="gymMemberForm" method="post" action="" class="p-6 space-y-6 overflow-y-auto flex-grow">
       {% csrf_token %}
 
       {# Show form errors (non-field + field-level) #}
