added proper department wise sla compliance in the tickets section

--- a/templates/auth/password_reset.html
+++ b/templates/auth/password_reset.html
@@ -49,7 +49,7 @@
             <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
               <img src="{% static 'images/login/username.svg' %}" alt="Username" class="h-5 w-5">
             </div>
-            <input type="email" name="email" class="w-full h-10 left-[36px] top-0 absolute bg-transparent outline-none text-gray-900 text-base font-normal font-['Inter'] leading-normal pl-3" placeholder="Enter your email address" required>
+            <input autocomplete="off" type="email" name="email" class="w-full h-10 left-[36px] top-0 absolute bg-transparent outline-none text-gray-900 text-base font-normal font-['Inter'] leading-normal pl-3" placeholder="Enter your email address" required>
           </div>
         </div>
       </div>
