--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -45,7 +45,7 @@
             <div class="space-y-2">
                 <label for="username" class="text-sm font-medium text-gray-700">Username or Email</label>
                 <div class="relative">
-                    <input type="text" name="username" id="username" placeholder="Enter your username or email" required
+                    <input autocomplete="off" type="text" name="username" id="username" placeholder="Enter your username or email" required
                            class="block w-full pr-10 pl-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:ring-sky-500 focus:border-sky-500 sm:text-sm">
                     <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
                         <img src="{% static 'images/login/username.svg' %}" alt="Username" class="h-5 w-5">
@@ -57,7 +57,7 @@
             <div class="space-y-2">
                 <label for="password" class="text-sm font-medium text-gray-700">Password</label>
                 <div class="relative">
-                    <input type="password" name="password" id="password" placeholder="Enter your password" required
+                    <input autocomplete="off" type="password" name="password" id="password" placeholder="Enter your password" required
                            class="block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:ring-sky-500 focus:border-sky-500 sm:text-sm">
                     <div class="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer" id="togglePassword">
                         <img src="{% static 'images/login/eye.svg' %}" alt="Toggle Password Visibility" class="h-5 w-5 text-gray-400" id="eyeIcon">
