--- a/templates/dashboard/departments.html
+++ b/templates/dashboard/departments.html
@@ -77,7 +77,7 @@
           ></button>
         </div>
         <div class="modal-body">
-          <input
+          <input autocomplete="off"
             type="text"
             name="name"
             class="form-control"
@@ -131,7 +131,7 @@
           ></button>
         </div>
         <div class="modal-body">
-          <input
+          <input autocomplete="off"
             type="text"
             name="name"
             class="form-control"
